crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__group_with_keyword_or_type_alternatives.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
struct Foo(
    pub Option<crate::OverflowPosition>,
    pub ::css_parse::Or![::css_parse::T![Ident], crate ::SelfPosition],
);
