crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__group_with_optional_leader.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C)]
struct Foo<'a>(
    pub crate::NormalOr<
        (
            Option<crate::Value<'a, crate::OverflowPosition>>,
            crate::Value<'a, crate::SelfPosition>,
        ),
    >,
);
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
