crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__keyword_bounded_type.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
enum Foo<'a> {
    #[atom(CssAtomSet::Foo)]
    Foo(::css_parse::T![Ident]),
    Oblique(
        #[atom(CssAtomSet::Oblique)]
        ::css_parse::T![Ident],
        Option<crate::CalcableValue<'a, crate::Ranged<crate::Angle, -90i32, 90i32>>>,
    ),
}
