crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__keyword_int_literal.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C, u8)]
enum Foo {
    Keyword(::css_parse::T![Ident]),
    Literal2(crate::Exact<crate::CSSInt, 2i32>),
}
#[cfg(test)]
::stable_type_layout::register!(Foo);
