crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__keyword_int_literal_dimension_literal.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
#[cfg_attr(test, derive(::stable_type_layout::TypeLayout))]
#[repr(C, u8)]
enum Foo {
    #[atom(CssAtomSet::Keyword)]
    Keyword(::css_parse::T![Ident]),
    Literal1(crate::Exact<crate::CSSInt, 1i32>),
    Literal1deg(#[atom(CssAtomSet::Deg)] crate::Exact<::css_parse::T![Dimension], 1i32>),
}
#[cfg(test)]
::stable_type_layout::register!(Foo);
