crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__literal_with_derive_parse.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C, u8)]
enum Foo {
    Literal0deg(#[atom(CssAtomSet::Deg)] crate::Exact<::css_parse::T![Dimension], 0i32>),
    Literal90deg(
        #[atom(CssAtomSet::Deg)]
        crate::Exact<::css_parse::T![Dimension], 90i32>,
    ),
}
#[cfg(test)]
::stable_type_layout::register!(Foo);
